# workflow-iimi

./: .gitignore  .releaserc  Dockerfile  README.md  conftest.py  docker-compose.yaml  mise.toml  pyproject.toml  run.r  utils.py  workflow.py
.github/workflows/: ci.yml  publish.yaml
example/: coverage.csv  nucleotide_info.csv  prediction_sequence.csv  prediction_virus.csv  untrustworthy.csv
example/index/: reference.3.bt2  sequence_otu_map.json
iimi/: DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE
iimi/R/: convert_bam_to_cov.R  data.R  plot_cov.R  predict_iimi.R  train_iimi.R
iimi/data/: default_mappability_profile.rda  default_nucleotide_info.rda  example_cov.rda  example_diag.rda  trained_xgb.rda  virus_segments.rda
iimi/man/: convert_bam_to_cov.Rd  example_cov.Rd  example_diag.Rd  mappability_profile.Rd  nucleotide_info.Rd  plot_cov.Rd  predict_iimi.Rd  train_iimi.Rd  trained_rf.Rd  trained_xgb.Rd  virus_segments.Rd
iimi/vignettes/: package_vignette.Rmd  package_vignette.html
tests/: test_utils.py  test_workflow.py
tests/__snapshots__/: test_utils.ambr
