[project]
name = "workflow-iimi"
version = "0.0.0"
description = ""
authors = [
    {name="Ian Boyes"},
    {name="Reece Hoffmann"}
]
license = "MIT"
requires-python = ">=3.12.3,<3.13"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
biopython = "^1.85"
virtool-workflow = ">=7.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^1.0.0"
pytest-mock = "^3.14.1"
ruff = "^0.11.13"
syrupy = "^4.9.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["ALL"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
