[project]
name = "workflow-iimi"
version = "0.0.0"
description = ""
authors = [
    {name="Ian Boyes"},
    {name="Reece Hoffmann"}
]
license = "MIT"
requires-python = ">=3.13.7,<3.14"
dependencies = [
    "biopython>=1.85",
    "virtool",
]
[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "pytest-mock>=3.15.0",
    "ruff>=0.12.12",
    "syrupy>=4.9.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",  # Use D211 instead (no blank line before class)
    "D213",  # Use D212 instead (multi-line summary on first line)
    "COM812",  # May conflict with formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN201", "ANN202", "D205", "PLR0913", "S101", "S106"]
"tests/__init__.py" = ["D104"]
"conftest.py" = ["D100"]

[tool.ruff.lint.pydocstyle]
ignore-decorators = ["pyfixtures.fixture", "pytest.fixture"]

[tool.uv.sources]
virtool = { git = "https://github.com/virtool/virtool", tag = "31.11.3" }
